cloudbank-v4/local-environment/k3s_data/manifests/ebaas/00-eureka.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: eureka
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: eureka
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: eureka
  namespace: eureka
spec:
  clusterIP: None
  ports:
  - name: eureka
    port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app.kubernetes.io/name: eureka
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: eureka
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: eureka-np
  namespace: eureka
spec:
  ports:
  - name: eureka
    nodePort: 30030
    port: 8761
  selector:
    app.kubernetes.io/name: eureka
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: eureka
  namespace: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eureka
  serviceName: eureka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eureka
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - eureka
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        image: 'localhost:30100/ebaas/eureka:1.3.0'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: eureka
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1200Mi
          requests:
            cpu: 250m
            memory: 1Gi
      imagePullSecrets:
      - name: registry-pull-auth
