cloudbank-v4/local-environment/k3s_data/manifests/ebaas/admin-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.3
    oracle/edition: 'COMMUNITY'
  name: admin-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.3
    oracle/edition: 'COMMUNITY'
  name: admin-server
  namespace: admin-server
spec:
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app.kubernetes.io/name: admin-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.3
    oracle/edition: 'COMMUNITY'
  name: admin-server
  namespace: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-server
  serviceName: admin-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-server
    spec:
      containers:
      - env:
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        image: 'localhost:30100/ebaas/admin-server:1.3.0'
        imagePullPolicy: IfNotPresent
        name: admin-server
        ports:
        - containerPort: 8989
      imagePullSecrets:
      - name: registry-pull-auth
