cloudbank-v4/local-environment/k3s_data/manifests/ebaas/azn-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.2
    oracle/edition: 'COMMUNITY'
  name: azn-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.2
    oracle/edition: 'COMMUNITY'
  name: azn-server
  namespace: azn-server
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: azn-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.2
    oracle/edition: 'COMMUNITY'
  name: azn-server
  namespace: azn-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: azn-server
  serviceName: azn-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: azn-server
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: db.username
              name: 'baas-db-secrets'
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: DB_SERVICE
          valueFrom:
            secretKeyRef:
              key: db.service
              name: 'baas-db-secrets'
        - name: spring.datasource.username
          valueFrom:
            secretKeyRef:
              key: db.username
              name: 'baas-db-secrets'
        - name: spring.datasource.password
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: ORACTL_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: admin
              name: oractl-passwords
        - name: ORACTL_USER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: user
              name: oractl-passwords
        - name: spring.datasource.url
          value: jdbc:oracle:thin:@$(DB_SERVICE)?TNS_ADMIN=/oracle/tnsadmin
        - name: CONNECT_STRING
          value: jdbc:oracle:thin:@$(DB_SERVICE)?TNS_ADMIN=/oracle/tnsadmin
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        - name: RUN_LIQUIBASE
          value: "true"
        image: 'localhost:30100/ebaas/azn-server:1.3.0'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 70
          periodSeconds: 10
          timeoutSeconds: 10
        name: azn-server
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /oracle/tnsadmin
          name: tns-admin
      imagePullSecrets:
      - name: registry-pull-auth
      volumes:
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
