cloudbank-v4/local-environment/k3s_data/manifests/ebaas/coherence.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.5
    oracle/edition: 'COMMUNITY'
  name: coherence
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: rest
    app.kubernetes.io/instance: coherence-operator-rest
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.5
    control-plane: coherence
    oracle/edition: 'COMMUNITY'
  name: coherence-operator-rest
  namespace: coherence
spec:
  ports:
  - name: http-rest
    port: 8000
    targetPort: operator
  selector:
    app.kubernetes.io/component: manager
    app.kubernetes.io/instance: coherence-operator-manager
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/version: 3.3.5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: coherence-operator-webhook
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.5
    control-plane: coherence
    oracle/edition: 'COMMUNITY'
  name: coherence-operator-webhook
  namespace: coherence
spec:
  ports:
  - name: https-webhook
    port: 443
    targetPort: webhook-server
  selector:
    app.kubernetes.io/component: manager
    app.kubernetes.io/instance: coherence-operator-manager
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/version: 3.3.5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/instance: coherence-operator-manager
    app.kubernetes.io/name: coherence-operator
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.3.5
    control-plane: coherence
    oracle/edition: 'COMMUNITY'
  name: coherence-operator-controller-manager
  namespace: coherence
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: coherence
  template:
    metadata:
      labels:
        app.kubernetes.io/component: manager
        app.kubernetes.io/instance: coherence-operator-manager
        app.kubernetes.io/name: coherence-operator
        app.kubernetes.io/part-of: coherence-operator
        app.kubernetes.io/version: 3.3.5
        control-plane: coherence
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: coherence-operator-manager
                  app.kubernetes.io/name: coherence-operator
                  app.kubernetes.io/version: 3.3.5
                  control-plane: coherence
              topologyKey: topology.kubernetes.io/zone
            weight: 50
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: coherence-operator-manager
                  app.kubernetes.io/name: coherence-operator
                  app.kubernetes.io/version: 3.3.5
                  control-plane: coherence
              topologyKey: oci.oraclecloud.com/fault-domain
            weight: 10
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: coherence-operator-manager
                  app.kubernetes.io/name: coherence-operator
                  app.kubernetes.io/version: 3.3.5
                  control-plane: coherence
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - operator
        - --enable-leader-election
        command:
        - /files/runner
        image: ghcr.io/oracle/coherence-operator:3.3.5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: health
          initialDelaySeconds: 10
          periodSeconds: 10
        name: manager
        ports:
        - containerPort: 8000
          name: operator
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 8088
          name: health
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: coherence-operator-service-account
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          optional: true
          secretName: coherence-operator-coherence-webhook-server-cert
