cloudbank-v4/local-environment/k3s_data/manifests/ebaas/conductor-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.13.8
    oracle/edition: 'COMMUNITY'
  name: conductor-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.13.8
    oracle/edition: 'COMMUNITY'
  name: conductor-server
  namespace: conductor-server
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: conductor-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.13.8
    oracle/edition: 'COMMUNITY'
  name: conductor-server
  namespace: conductor-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: conductor-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: conductor-server
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: db.username
              name: 'baas-db-secrets'
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: DB_SERVICE
          valueFrom:
            secretKeyRef:
              key: db.service
              name: 'baas-db-secrets'
        - name: CONNECT_STRING
          value: jdbc:oracle:thin:@$(DB_SERVICE)?TNS_ADMIN=/oracle/tnsadmin
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        image: 'localhost:30100/ebaas/conductor-server:1.3.0'
        imagePullPolicy: IfNotPresent
        name: conductor-server
        ports:
        - containerPort: 8080
          name: server
        volumeMounts:
        - mountPath: /oracle/tnsadmin
          name: tns-admin
      imagePullSecrets:
      - name: registry-pull-auth
      restartPolicy: Always
      volumes:
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
