cloudbank-v4/local-environment/k3s_data/manifests/ebaas/config-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: config-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: config-server
  namespace: config-server
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: config-server
  selector:
    app.kubernetes.io/name: config-server
  sessionAffinity: ClientIP
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 4.1.3
    oracle/edition: 'COMMUNITY'
  name: config-server
  namespace: config-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: config-server
  serviceName: config-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: config-server
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: db.username
              name: 'baas-db-secrets'
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: DB_SERVICE
          valueFrom:
            secretKeyRef:
              key: db.service
              name: 'baas-db-secrets'
        - name: CONNECT_STRING
          value: jdbc:oracle:thin:@$(DB_SERVICE)?TNS_ADMIN=/oracle/tnsadmin
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        - name: RUN_LIQUIBASE
          value: "true"
        image: 'localhost:30100/ebaas/config-server:1.3.0'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health/liveness
            port: config-server
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 10
        name: config-server
        ports:
        - containerPort: 8080
          name: config-server
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: config-server
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /oracle/tnsadmin
          name: tns-admin
      imagePullSecrets:
      - name: registry-pull-auth
      volumes:
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
