cloudbank-v4/local-environment/k3s_data/manifests/ebaas/loki.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 2.6.1
    chart: loki-2.16.0
    helm-version: 2.16.0
    heritage: Helm
    oracle/edition: 'COMMUNITY'
    release: loki
  name: loki
  namespace: grafana
spec:
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 2.6.1
    chart: loki-2.16.0
    helm-version: 2.16.0
    heritage: Helm
    oracle/edition: 'COMMUNITY'
    release: loki
    variant: headless
  name: loki-headless
  namespace: grafana
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 2.6.1
    chart: loki-2.16.0
    helm-version: 2.16.0
    heritage: Helm
    oracle/edition: 'COMMUNITY'
    release: loki
  name: loki-memberlist
  namespace: grafana
spec:
  clusterIP: None
  ports:
  - name: http
    port: 7946
    protocol: TCP
    targetPort: memberlist-port
  publishNotReadyAddresses: true
  selector:
    app: loki
    release: loki
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: loki
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 2.6.1
    chart: loki-2.16.0
    helm-version: 2.16.0
    heritage: Helm
    oracle/edition: 'COMMUNITY'
    release: loki
  name: loki
  namespace: grafana
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: loki
      release: loki
  serviceName: loki-headless
  template:
    metadata:
      annotations:
        checksum/config: f4c6015435e8137a6cf14b009d6ecda2fbda45c647733d0918950fe026b1fa00
        prometheus.io/port: "3100"
        prometheus.io/scrape: "true"
      labels:
        app: loki
        name: loki
        release: loki
    spec:
      affinity: {}
      containers:
      - args:
        - -config.file=/etc/loki/loki.yaml
        env: null
        image: grafana/loki:2.6.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        name: loki
        ports:
        - containerPort: 3100
          name: http-metrics
          protocol: TCP
        - containerPort: 9095
          name: grpc
          protocol: TCP
        - containerPort: 7946
          name: memberlist-port
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 45
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /etc/loki
          name: config
        - mountPath: /data
          name: storage
          subPath: null
      initContainers: []
      nodeSelector: {}
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccountName: loki
      terminationGracePeriodSeconds: 4800
      tolerations: []
      volumes:
      - emptyDir: {}
        name: tmp
      - name: config
        secret:
          secretName: loki
      - emptyDir: {}
        name: storage
  updateStrategy:
    type: RollingUpdate
