cloudbank-v4/local-environment/k3s_data/manifests/ebaas/oracle-database-exporter.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: oracle-database-exporter
    app.kubernetes.io/part-of: database
    app.kubernetes.io/version: 1.3.1
  name: oracle-database-exporter
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-exporter
    app.kubernetes.io/name: oracle-database-exporter
    app.kubernetes.io/part-of: database
    app.kubernetes.io/version: 1.3.1
    release: stable
  name: metrics-exporter
  namespace: oracle-database-exporter
spec:
  ports:
  - name: metrics
    port: 9161
    targetPort: 9161
  selector:
    app: metrics-exporter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: oracle-database-exporter
    app.kubernetes.io/part-of: database
    app.kubernetes.io/version: 1.3.1
  name: metrics-exporter
  namespace: oracle-database-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-exporter
  template:
    metadata:
      labels:
        app: metrics-exporter
        app.kubernetes.io/name: oracle-database-exporter
        app.kubernetes.io/part-of: database
        app.kubernetes.io/version: 1.3.1
    spec:
      containers:
      - args:
        - --log.level=info
        command:
        - /oracledb_exporter
        image: container-registry.oracle.com/database/observability-exporter:1.3.1
        imagePullPolicy: IfNotPresent
        name: metrics-exporter
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
        - mountPath: /lib/oracle/21/client64/lib/network/admin
          name: tns-admin
        - mountPath: /log
          name: alert-log
      - args:
        - -config.file=/etc/promtail/promtail.yaml
        image: grafana/promtail
        name: promtail
        volumeMounts:
        - mountPath: /etc/promtail
          name: config
        - mountPath: /log
          name: alert-log
      imagePullSecrets:
      - name: registry-pull-auth
      restartPolicy: Always
      volumes:
      - emtpyDir:
          sizeLimit: 500Mi
        name: alert-log
      - configMap:
          name: promtail-sidecar-config-map
        name: config
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
