cloudbank-v4/local-environment/k3s_data/manifests/ebaas/otmm.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 24.2.1
    oracle/edition: 'COMMUNITY'
  name: otmm
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: otmm-tcs
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 24.2.1
    oracle/edition: 'COMMUNITY'
    service: otmm-tcs
  name: otmm-tcs
  namespace: otmm
spec:
  ports:
  - name: http
    port: 9000
  selector:
    app.kubernetes.io/name: otmm-tcs
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: otmm-tcs
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 24.2.1
    oracle/edition: 'COMMUNITY'
    version: v1
  name: otmm-tcs
  namespace: otmm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: otmm-tcs
      version: v1
  serviceName: otmm-tcs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otmm-tcs
        version: v1
    spec:
      containers:
      - env:
        - name: GIN_MODE
          value: release
        - name: CONFIG_MAP_PATH
          value: /etc/config
        image: container-registry.oracle.com/database/otmm:24.2.1
        imagePullPolicy: IfNotPresent
        name: otmm-tcs
        ports:
        - containerPort: 9000
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 1Gi
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
      securityContext:
        runAsUser: 1000
      serviceAccountName: otmm-tcs
      volumes:
      - configMap:
          name: tcs-config
        name: config-volume
