cloudbank-v4/local-environment/k3s_data/manifests/ebaas/10-apisix.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/service: apisix-admin
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: apisix-2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix-admin
  namespace: apisix
spec:
  ports:
  - name: apisix-admin
    port: 9180
    protocol: TCP
    targetPort: 9180
  selector:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: apisix
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix-dashboard
  namespace: apisix
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: dashboard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: etcd-9.7.3
    oracle/edition: 'COMMUNITY'
  name: apisix-etcd
  namespace: apisix
spec:
  ports:
  - name: client
    nodePort: null
    port: 2379
    targetPort: client
  - name: peer
    nodePort: null
    port: 2380
    targetPort: peer
  selector:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: etcd
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: etcd-9.7.3
    oracle/edition: 'COMMUNITY'
  name: apisix-etcd-headless
  namespace: apisix
spec:
  clusterIP: None
  ports:
  - name: client
    port: 2379
    targetPort: client
  - name: peer
    port: 2380
    targetPort: peer
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: etcd
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/service: apisix-gateway
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: apisix-2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix-gateway
  namespace: apisix
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: apisix-gateway
    port: 80
    protocol: TCP
    targetPort: 9080
  selector:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: apisix
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/service: apisix-prometheus-metrics
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: apisix-2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix-prometheus-metrics
  namespace: apisix
spec:
  ports:
  - name: prometheus
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: apisix
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: apisix-2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix
  namespace: apisix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: apisix
      app.kubernetes.io/name: apisix
  template:
    metadata:
      annotations:
        checksum/config: f5847d272527195333f53c4f4204f65e5ec482652bc2efb2134b3aa4fb1c9b28
      labels:
        app.kubernetes.io/instance: apisix
        app.kubernetes.io/name: apisix
    spec:
      containers:
      - image: docker.io/apache/apisix:3.9.1-debian
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 30
        name: apisix
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
        - containerPort: 9443
          name: tls
          protocol: TCP
        - containerPort: 9180
          name: admin
          protocol: TCP
        - containerPort: 9091
          name: prometheus
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9080
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /usr/local/apisix/conf/config.yaml
          name: apisix-config
          subPath: config.yaml
      hostNetwork: false
      serviceAccountName: serviceaccount-apisix
      volumes:
      - configMap:
          name: apisix
        name: apisix-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix-dashboard
  namespace: apisix
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: apisix
      app.kubernetes.io/name: dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: apisix
        app.kubernetes.io/name: dashboard
    spec:
      containers:
      - image: docker.io/apache/apisix-dashboard:3.0.0-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: dashboard
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/local/apisix-dashboard/conf/conf.yaml
          name: apisix-dashboard-config
          subPath: conf.yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: apisix-dashboard
      serviceAccountName: apisix-dashboard
      terminationGracePeriodSeconds: 30
      volumes:
      - name: apisix-dashboard-config
        secret:
          defaultMode: 420
          secretName: apisix-dashboard
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: etcd
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: etcd
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: etcd-9.7.3
    oracle/edition: 'COMMUNITY'
  name: apisix-etcd
  namespace: apisix
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: etcd
      app.kubernetes.io/instance: apisix
      app.kubernetes.io/name: etcd
  serviceName: apisix-etcd-headless
  template:
    metadata:
      annotations:
        checksum/token-secret: 68aeb1839cdf9a27e9e206bb1d628d50cfece5d72c56f0880cf416127642d494
      labels:
        app.kubernetes.io/component: etcd
        app.kubernetes.io/instance: apisix
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: etcd
        app.kubernetes.io/version: 3.5.10
        helm.sh/chart: etcd-9.7.3
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: etcd
                  app.kubernetes.io/instance: apisix
                  app.kubernetes.io/name: etcd
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: MY_STS_NAME
          value: apisix-etcd
        - name: ETCDCTL_API
          value: "3"
        - name: ETCD_ON_K8S
          value: "yes"
        - name: ETCD_START_FROM_SNAPSHOT
          value: "no"
        - name: ETCD_DISASTER_RECOVERY
          value: "no"
        - name: ETCD_NAME
          value: $(MY_POD_NAME)
        - name: ETCD_DATA_DIR
          value: /bitnami/etcd/data
        - name: ETCD_LOG_LEVEL
          value: info
        - name: ALLOW_NONE_AUTHENTICATION
          value: "yes"
        - name: ETCD_AUTH_TOKEN
          value: jwt,priv-key=/opt/bitnami/etcd/certs/token/jwt-token.pem,sign-method=RS256,ttl=10m
        - name: ETCD_ADVERTISE_CLIENT_URLS
          value: http://$(MY_POD_NAME).apisix-etcd-headless.apisix.svc.cluster.local:2379,http://apisix-etcd.apisix.svc.cluster.local:2379
        - name: ETCD_LISTEN_CLIENT_URLS
          value: http://0.0.0.0:2379
        - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
          value: http://$(MY_POD_NAME).apisix-etcd-headless.apisix.svc.cluster.local:2380
        - name: ETCD_LISTEN_PEER_URLS
          value: http://0.0.0.0:2380
        - name: ETCD_INITIAL_CLUSTER_TOKEN
          value: etcd-cluster-k8s
        - name: ETCD_INITIAL_CLUSTER_STATE
          value: new
        - name: ETCD_INITIAL_CLUSTER
          value: apisix-etcd-0=http://apisix-etcd-0.apisix-etcd-headless.apisix.svc.cluster.local:2380,apisix-etcd-1=http://apisix-etcd-1.apisix-etcd-headless.apisix.svc.cluster.local:2380,apisix-etcd-2=http://apisix-etcd-2.apisix-etcd-headless.apisix.svc.cluster.local:2380
        - name: ETCD_CLUSTER_DOMAIN
          value: apisix-etcd-headless.apisix.svc.cluster.local
        envFrom: null
        image: docker.io/bitnami/etcd:3.5.10-debian-11-r2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /opt/bitnami/scripts/etcd/healthcheck.sh
          failureThreshold: 5
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: etcd
        ports:
        - containerPort: 2379
          name: client
          protocol: TCP
        - containerPort: 2380
          name: peer
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /opt/bitnami/scripts/etcd/healthcheck.sh
          failureThreshold: 5
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits: {}
          requests: {}
        volumeMounts:
        - mountPath: /bitnami/etcd
          name: data
        - mountPath: /opt/bitnami/etcd/certs/token/
          name: etcd-jwt-token
          readOnly: true
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      volumes:
      - name: etcd-jwt-token
        secret:
          defaultMode: 256
          secretName: apisix-etcd-jwt-token
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 3.9.1
    helm-version: 2.8.1
    helm.sh/chart: apisix-2.8.1
    oracle/edition: 'COMMUNITY'
  name: apisix
  namespace: apisix
spec:
  ingressClassName: traefik
  rules:
  - host: ""
    http:
      paths:
      - backend:
          service:
            name: apisix-gateway
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
