cloudbank-v4/local-environment/k3s_data/manifests/ebaas/12-alertmanager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: v0.67.1
    oracle/edition: 'COMMUNITY'
  name: alertmanager
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: alertmanager-authn
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: v0.67.1
    oracle/edition: 'COMMUNITY'
  name: alertmanager
  namespace: alertmanager
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              name: web
        path: /alertmanager(/|$)(.*)
        pathType: Prefix
